--- a/back-end/package.json
+++ b/back-end/package.json
@@ -15,7 +15,8 @@
     "test": "mocha src/tests/**/*$NAME*.test.js --exit",
     "test:coverage": "nyc --all npm run test",
     "test:coverage:json": "nyc --all --reporter=json-summary npm run test",
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
+    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json .",
+    "zod": "^3.19.1"
   },
   "dependencies": {
     "@hapi/boom": "9.1.4",
@@ -30,7 +31,8 @@
     "multer": "1.4.4",
     "mysql2": "2.3.3",
     "sequelize": "6.17.0",
-    "socket.io": "4.4.1"
+    "socket.io": "4.4.1",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "chai": "4.3.6",
