--- a/back-end/package.json
+++ b/back-end/package.json
@@ -31,6 +31,7 @@
     "md5": "2.3.0",
     "multer": "1.4.4",
     "mysql2": "2.3.3",
+    "path": "^0.12.7",
     "sequelize": "6.17.0",
     "socket.io": "4.4.1",
     "zod": "^3.19.1"
